refactor(server): Walk full exception cause chain in appendExceptionSection.
- Walk full exception cause chain in appendExceptionSection (was single-level if);
  cap depth at MAX_CAUSE_DEPTH = 10 to guard against cycles and runaway chains
- Refactored the DefaultCorsConfigurationBuilder to address a SonarQube issue